2005-11-05 Pierrick LE GALL

	* bug 186 fixed: useless template theme icons deleted. Remaining
	icons in GIF converted to PNG.

2005-10-31 Pierrick LE GALL

	* bug 185 fixed: errors in language items.

2005-10-31 Pierrick LE GALL

	* modification: use "filter" class for quickconnect box (with some
	custom modifications)

	* bug fixed: the total number of pictures had disappeared

2005-10-30 volcom
	
	* bug 190 fixed: issue in stats.tpl display
	* bug fixed: labels of monthly, daily graph fixed

2005-10-26 chrisaga

	* bug 177 fixed: for Safari (was fixed for Konqueror only)

2005-10-25 Pierrick LE GALL

	* bug 183 fixed: Warning when trying to associate an image with an
	already associated category. Just coded the TODO instructions I
	had let some time ago.

2005-10-23 chrisaga

	* bug 184 fixed: .png button left aligned in IE

2005-10-23 Pierrick LE GALL

	* bug 182 fixed: newly created user is not displayed in the user
	list.

2005-10-23 Pierrick LE GALL

	* bug fixed: during file tree synchronization, warning on finding
	the next rank of category which has no sub-categories yet.
	
2005-10-23 chrisaga

	* bug fixed: cat-list.tpl validate now

	* improvement: removed some unnecessary css rules from old tests in 
	FROM  design in file default-layout.css

2005-10-23 Pierrick LE GALL

	* bug 181 fixed: "Parameters not created in phpwebgallery_config
	during upgrade". gallery_title and gallery_description had not
	been added to config table. (use|show)_(exif|iptc) and
	authorize_remembering have also been removed...

2005-10-22 chrisaga

	* bug 177 fixed: icon tools wrong position in Safari and Konqueror
	Needed a little trick to fix it. Put the trick in a fix-khtml.css
	Loading in header.tpl and protected from IE, Geko and Opera,
	just in case (couldn't found a safari css-only filter wich validate)
	
	* bug fixed: issue in the FORM in remote_site.tpl which prevented
	HTML validation (still something to do with the TABLE).

2005-10-22 Pierrick LE GALL
